# rust2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  configuration.json  package-lock.json  package.json  requests.http  spec.yaml  tailwind.config.js
.circleci/: _config.yml  config.yml
.github/workflows/: audit.yml  checks.yml  general.yml
.sqlx/: query-459ecb8c5d7364342f08c44bc7e7f76b96c82b922b4cb482eb7a70fb2bdfc6ea.json
configuration/: base.yaml  production.yaml  testing.yaml
migrations/: 20240319201603_make_status_not_null_in_subscriptions.sql  20240319203135_create_subscription_tokens_table.sql  20240326180323_create_users_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: file_handlers.rs  greet.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  login.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/routes/login/fragments/: login_error.htmx.html  login_success.htmx
static/: index.html  styles.css
templates/: app.html  auth.html  base.html  layout.html
templates/login/: login.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
