[package]
name = "rust2prod"
version = "0.1.0"
authors = ["Richard Hoffmann <rhoffmann@fastmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1.5.0", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.11.3"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
actix-files = "0.6.5"

[dependencies.sqlx]
version = "0.7.2"
default_features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]


[dev-dependencies]
reqwest = "0.11"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
